[package]
name = "resolver-core"
description = "Resolver core library"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-sdk = { workspace = true }
resolver-sdk = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
